Arrows in Safety page

--- a/wiki/pages/safety.html
+++ b/wiki/pages/safety.html
@@ -49,16 +49,16 @@
             <p class="mt-5 MAIN-STUFF" id="section2">2. Lab Safety<br></p>
             <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">1. The MIT-MAHE team's wet lab members conduct their experiments in the Department of Biotechnology's Project Lab, a lab/workspace designated with Biosafety Level 2 (BSL-2). Our laboratory and work practices within the lab adhere to the guidelines for biosafety and biosecurity in India as well as the guidelines provided by the Centre of Bioethics, MAHE.<br><br> 
               2. All members of the wet lab subsystem of our team have received extensive training in safe lab practices from our PI, Dr. Ritu Raval and our advisors before they began working in the lab.<br> 
-              -> We were advised on the risk assessment of the reagents in use, proper identification, management, and safe disposal of biological and chemical hazardous waste and lab consumables as well as the necessary precautions to be taken while working with biological materials.<br> 
-              -> We were also briefed on the working mechanisms of all the equipment and machinery available in the lab and on how to appropriately and safely use them to conduct experiments. They were advised on appropriately using equipment such as the centrifuge, UV-visible spectrophotometer, etc. as well as safe handling of the autoclave and decontamination units.<br>
-              -> We were also made familiar with the location of safety showers, eye wash, first aid kits, fire extinguishers, as well as emergency evacuation routes.<br>  
-              -> We received training sessions from their advisors and PhD scholars Mr Rajesh M. Gowda and Mrs. Atheena PV on working in the biosafety cabinet and precautions to avoid contamination.<br><br> 
+              &#8594; We were advised on the risk assessment of the reagents in use, proper identification, management, and safe disposal of biological and chemical hazardous waste and lab consumables as well as the necessary precautions to be taken while working with biological materials.<br> 
+              &#8594; We were also briefed on the working mechanisms of all the equipment and machinery available in the lab and on how to appropriately and safely use them to conduct experiments. They were advised on appropriately using equipment such as the centrifuge, UV-visible spectrophotometer, etc. as well as safe handling of the autoclave and decontamination units.<br>
+              &#8594; We were also made familiar with the location of safety showers, eye wash, first aid kits, fire extinguishers, as well as emergency evacuation routes.<br>  
+              &#8594; We received training sessions from their advisors and PhD scholars Mr Rajesh M. Gowda and Mrs. Atheena PV on working in the biosafety cabinet and precautions to avoid contamination.<br><br> 
               3. Some practices all members working in the lab strictly follow include:<br>
-              -> Eating and drinking are strictly prohibited in the lab.<br>
-              -> All members have to wear lab coats, protective goggles, and nitrile gloves as necessary whilst working in the lab.<br>
-              -> Proper sterilisation is undertaken before working in the BSL-2 biosafety cabinet.<br>
-              -> All equipment and machinery in the laboratory such as the centrifuge, spectrophotometer, cold storage, autoclave and such, are handled with care and well-maintained. Regular maintenance work is done for them.<br>
-              -> Taking further precautions, the lab is fumigated every 3-4 weeks.<br><br>
+              &#8594; Eating and drinking are strictly prohibited in the lab.<br>
+              &#8594; All members have to wear lab coats, protective goggles, and nitrile gloves as necessary whilst working in the lab.<br>
+              &#8594; Proper sterilisation is undertaken before working in the BSL-2 biosafety cabinet.<br>
+              &#8594; All equipment and machinery in the laboratory such as the centrifuge, spectrophotometer, cold storage, autoclave and such, are handled with care and well-maintained. Regular maintenance work is done for them.<br>
+              &#8594; Taking further precautions, the lab is fumigated every 3-4 weeks.<br><br>
               <b>Use of Harmful Reagents and Procedures:</b><br>
               Some experimental procedures involved using harmful chemicals and reagents, however, all additional safety measures were taken to prevent any harm.<br><br>
               <button class="modal-button" onclick="openModal('modal1')">UV light</button>
