--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -129,7 +129,7 @@
           <p class="MAIN-STUFF"><u>Learn: </u></p>
           <p class="sub-stuff">Through iHP meetings with Mr. Omkar Khade and Dr. Gurunath Ramanathan, we learnt that manually altering the amino acids in close proximity to the catalytic triad requires a comprehensive understanding of the individual functions of each amino acid involved. A random mutagenesis approach would be difficult to perform in-silico as such experiments are usually only performed in-vitro. As a result, we felt the best way forward was to focus on the initial problem statement-dealing with TCC  in wastewater, with an alternative approach.
           </p>
-
+<hr>
           <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 1</p>
 
           <p class="MAIN-STUFF"><u>Design: </u></p>
@@ -150,7 +150,7 @@
               <br><br>
               As TCC does not uniformly dissolve in small volumes of water, we dissolve TCC in acetonitrile at first and then dilute this mixture in water. To ensure that acetonitrile does not have any adverse effect on the growth of our bacteria, we take acetonitrile-containing media as a condition as well.
           </p>
-          <p class="MAIN-STUFF"><u>Design: </u></p>
+          <p class="MAIN-STUFF"><u>Build: </u></p>
           <p class="sub-stuff">
             <b>Growth Curves</b> To perform these experiments, we inoculated the bacteria in media that simulated the conditions of the sludge tank.The growth was measured by checking the arbitrary units of optical density at 600nm. To convert to absolute units, a calibration curve was plotted for wet weight of the cell vs OD.
           </p>
@@ -403,7 +403,7 @@
               </div>
             </div>
           </div>
-
+<hr>
           <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 2</p>
 
           <p class="MAIN-STUFF"><u>Design:</u></p>
@@ -634,7 +634,7 @@ These values were used to calculate -r<sub>A</sub>  (the rate of reaction with r
           <p class="MAIN-STUFF"><u>Learn:</u></p>
           <p class="sub-stuff">
           On comparing our values to the literature, we get that the k values are approximately equal, thus validating our differential calculus method.<br><br>Hence, TccA amidase follows first-order kinetics.<br><br>Future cycles would involve the validation of these kinetics through experimentation.</p>
-
+<hr>
           <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 3</p>
           <p class="MAIN-STUFF"><u>Summary</u></p>
           <p class="sub-stuff">
@@ -882,7 +882,7 @@ From the results of our previous module of the DBTL cycle, <i>Acinetobacter bayl
             Design 4 incorporated all the suggestions from Dr. Bhat and Dr. Subbulaxmi and led us to our most ideal design that gave us a high hydraulic retention time of the primary sludge in the tank as well as a high adsorption affinity of the biochar. <br><br>
             However, we learnt from Dr. Kevin Sowers that this model would only be feasible for a lab scale model. Since at industry level we would be required to treat a larger amount of primary sludge per day we proposed design 5 which would have comparable efficiency to design 4 and be able to treat large quantities of sludge due to its larger volume and continuous operation.
           </p>
-
+<hr>
           <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 4</p>
 
           <p class="MAIN-STUFF"><u>Design:</u></p>
