--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -59,7 +59,7 @@
 
 <div class="content">
     <div class="m-2 mb-16">
-        <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 0</p>
+        <p class="mt-5 MAIN-STUFF">MODULE 0</p>
         <p class="MAIN-STUFF"><u>Overview: </u></p>
         <p class="sub-stuff">The first module of our DBTL cycle shows how our initial project idea shifted on the basis of iHP and testing. </p>
         <p class="MAIN-STUFF"><u>Design: </u></p>
