Remove centre align

--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -130,7 +130,7 @@
           <p class="sub-stuff">Through iHP meetings with Mr. Omkar Khade and Dr. Gurunath Ramanathan, we learnt that manually altering the amino acids in close proximity to the catalytic triad requires a comprehensive understanding of the individual functions of each amino acid involved. A random mutagenesis approach would be difficult to perform in-silico as such experiments are usually only performed in-vitro. As a result, we felt the best way forward was to focus on the initial problem statement-dealing with TCC  in wastewater, with an alternative approach.
           </p>
 <hr>
-          <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 1</p>
+          <p class="mt-5 MAIN-STUFF">MODULE 1</p>
 
           <p class="MAIN-STUFF"><u>Design: </u></p>
           <p class="sub-stuff">
@@ -404,7 +404,7 @@
             </div>
           </div>
 <hr>
-          <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 2</p>
+          <p class="mt-5 MAIN-STUFF">MODULE 2</p>
 
           <p class="MAIN-STUFF"><u>Design:</u></p>
 
@@ -432,7 +432,7 @@
           </p>
 
           <img src="" style="img-fluid">
-          <p class="sub-stuff" style="text-align:center;">
+          <p class="sub-stuff">
             <b>Fig 1:</b>TccA Gene Regulation in <i>Escherichia coli</i>
           </p>
 
@@ -635,7 +635,7 @@ These values were used to calculate -r<sub>A</sub>  (the rate of reaction with r
           <p class="sub-stuff">
           On comparing our values to the literature, we get that the k values are approximately equal, thus validating our differential calculus method.<br><br>Hence, TccA amidase follows first-order kinetics.<br><br>Future cycles would involve the validation of these kinetics through experimentation.</p>
 <hr>
-          <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 3</p>
+          <p class="mt-5 MAIN-STUFF">MODULE 3</p>
           <p class="MAIN-STUFF"><u>Summary</u></p>
           <p class="sub-stuff">
             As mentioned in our <a href="https://2023.igem.wiki/mit-mahe/project-implementation">implementation</a>, we aim to introduce a bioreactor in the wastewater treatment plant to treat the primary sludge and clear it of our target contaminant, Triclocarban (TCC). <br><br>
@@ -883,7 +883,7 @@ From the results of our previous module of the DBTL cycle, <i>Acinetobacter bayl
             However, we learnt from Dr. Kevin Sowers that this model would only be feasible for a lab scale model. Since at industry level we would be required to treat a larger amount of primary sludge per day we proposed design 5 which would have comparable efficiency to design 4 and be able to treat large quantities of sludge due to its larger volume and continuous operation.
           </p>
 <hr>
-          <p class="mt-5 MAIN-STUFF" style="text-align:center;">MODULE 4</p>
+          <p class="mt-5 MAIN-STUFF">MODULE 4</p>
 
           <p class="MAIN-STUFF"><u>Design:</u></p>
           <p class="sub-stuff">
