--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -13,6 +13,8 @@ myModal.addEventListener('shown.bs.modal', function () {
 {% endblock %}
 
 {% block sidebar_content %}
+<div class="content">
+  <div class="m-5 mb-16">
     <ul class="nav nav-pills flex-column mb-auto">
               <li class="nav-item">
                 <a href="#section1" class="nav-link link-dark" aria-current="page">
@@ -1443,7 +1445,6 @@ A notable point of discussion was the significant amount of <b>untreated wastewa
                 </p>
 <img class="img-fluid rounded mx-auto d-block" src="https://static.igem.wiki/teams/4641/wiki/meeting-with-olivia-gallup-dphil-candidate-at-the-university-of-oxford.png" >
 
-
               </div>
             </div>
           </div>
@@ -1546,5 +1547,7 @@ To know further details about our implementation, <a href="https://2023.igem.wik
 Samaga, P. (2021, January 29). Toxic cocktail of chemicals discharged into Indrani River making life miserable for locals. The New Indian Express. <a href="https://www.newindianexpress.com/states/karnataka/2021/jan/29/toxic-cocktail-of-chemicals-discharged-into-indrani-river-making-life-miserable-for-locals-2256670.html">https://www.newindianexpress.com/states/karnataka/2021/jan/29/toxic-cocktail-of-chemicals-discharged-into-indrani-river-making-life-miserable-for-locals-2256670.html</a>
 <br><br>
 YouTube. (n.d.). Chemical Reaction Engineering 2 (Heterogeneous Reactors). YouTube. Retrieved September 15, 2023, from <a href="https://youtube.com/playlist?list=PLbMVogVj5nJRrrhcrAIIJs1W0qgH5axqO&amp;si=491sP3j3CP_Kzyg-.">https://youtube.com/playlist?list=PLbMVogVj5nJRrrhcrAIIJs1W0qgH5axqO&amp;si=491sP3j3CP_Kzyg-.</a>
+</div>
+ </div>                 
 
 {% endblock %}
